--- a/Project#2_WebScraping_Cleaning_Fifa21.ipynb
+++ b/Project#2_WebScraping_Cleaning_Fifa21.ipynb
@@ -4294,12 +4294,12 @@
    "id": "1c2fc6f8",
    "metadata": {},
    "source": [
-    "## DATA IS OFFICIALLY CLEAN!\n",
+    "## DATA IS OFFICIALLY CLEAN! CHECK NOTES BELOW! \n",
     "\n",
     "Reasoning behind NULL values are as follows:\n",
     "\n",
-    "['Loan End Date'] - most players have permanent contracts. This column's data only applies to players on loan. \n",
-    "['Start_Contract'] & ['End_Contract'] - these columns derived from the ['Term & Contract'] column. Some of the dates were missing in the first place for some of the players. NULL values are simply representing a lack of data. "
+    "['Loan End Date'] - most players have permanent contracts. This column's data only applies to players on loan. NOTE: IF NECESSARY, TO GET RID OF NA VALUES FOR FURTHER ANALYSIS, CHANGE 'Loan End Date' COLUMN TO 'Loan_Remaining_Years' WHICH WOULD EQUAL: LOAN'S END DATE - TODAY'S DATE. THUS, NULL VALUES WOULD EQUAL 0. \n",
+    "['Start_Contract'] & ['End_Contract'] - these columns derived from the ['Term & Contract'] column. Some of the dates were missing in the first place for some of the players. NULL values are simply representing a lack of data. NOTE: IF NECESSARY TO DROP NULL VALUES, THE APPROACH TOWARDS THESE TWO FEATURES DEPENDS ON THE TYPE OF ANALYSIS TO BE DONE. EITHER COULD BE DROPPED OR CONVERTED TO ONE COLUMN SUMMARIZING CONTRACT'S LENGTH "
    ]
   }
  ],
